--- a/openApiDocs/beta/Devices.ServiceAnnouncement.yml
+++ b/openApiDocs/beta/Devices.ServiceAnnouncement.yml
@@ -5492,10 +5492,10 @@ components:
       properties:
         name:
           type: string
-          description: 'Name for this key-value pair. For more information about possible names for each resource type that uses this configuration, see keyValuePair names and values.'
+          description: Name for this key-value pair
         value:
           type: string
-          description: 'Value for this key-value pair. For more information about possible values for each resource type that uses this configuration, see keyValuePair names and values.'
+          description: Value for this key-value pair
           nullable: true
       additionalProperties:
         type: object
