--- a/openApiDocs/v1.0/DeviceManagement.Functions.yml
+++ b/openApiDocs/v1.0/DeviceManagement.Functions.yml
@@ -697,7 +697,7 @@ components:
       properties:
         id:
           type: string
-          description: The unique idenfier for an entity. Read-only.
+          description: The unique identifier for an entity. Read-only.
       additionalProperties:
         type: object
     ReferenceNumeric:
